@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-14T00:56:43Z",
-  "count_outdated" : 395,
-  "uniques_outdated" : 21,
+  "timestamp" : "2022-06-15T00:51:43Z",
+  "count_outdated" : 398,
+  "uniques_outdated" : 22,
   "count" : 410,
   "uniques" : 26,
   "views" : [
-    {
-      "timestamp": "2022-05-31T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-02T00:00:00Z",
       "count": 6,
