@@ -1,12 +1,7 @@
 {
-  "count": 15,
+  "count": 12,
   "uniques": 1,
   "views": [
-    {
-      "timestamp": "2022-05-31T00:00:00Z",
-      "count": 3,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-06-02T00:00:00Z",
       "count": 6,
